# signaling-game

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  beer_quiche.py  crawford_sobel.py  d1_criterion.py  intuitive_criterion.py  pbe_solver.py  signaling.py  spence.py
src/viz/: __init__.py  app.py
tests/: test_beer_quiche.py  test_crawford_sobel.py  test_refinements.py  test_spence.py
